@@ -1,5 +1,10 @@
 2013-12-14   Jan Hubicka  <jh@suse.cz>
 
+	PR ipa/59265
+	* ipa-prop.c (ipa_analyze_call_uses): Skip already
+	devirtualized calls.
+
+2013-12-14   Jan Hubicka  <jh@suse.cz>
 	PR middle-end/58477
 	* ipa-prop.c (stmt_may_be_vtbl_ptr_store): Skip clobbers.
 
